err/ars.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/ARS-0.5b1.egg-info'...
Listing './lib/python3.5/site-packages/ars'...
Listing './lib/python3.5/site-packages/ars/app'...
Listing './lib/python3.5/site-packages/ars/graphics'...
Listing './lib/python3.5/site-packages/ars/lib'...
Listing './lib/python3.5/site-packages/ars/lib/pydispatch'...
Compiling './lib/python3.5/site-packages/ars/lib/pydispatch/robust.py'...
***   File "./lib/python3.5/site-packages/ars/lib/pydispatch/robust.py", line 53
    except Exception, err:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ars/lib/pydispatch/saferef.py'...
***   File "./lib/python3.5/site-packages/ars/lib/pydispatch/saferef.py", line 121
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ars/lib/six'...
Listing './lib/python3.5/site-packages/ars/model'...
Listing './lib/python3.5/site-packages/ars/model/collision'...
Listing './lib/python3.5/site-packages/ars/model/contrib'...
Listing './lib/python3.5/site-packages/ars/model/geometry'...
Listing './lib/python3.5/site-packages/ars/model/physics'...
Listing './lib/python3.5/site-packages/ars/model/robot'...
Listing './lib/python3.5/site-packages/ars/model/simulator'...
Listing './lib/python3.5/site-packages/ars/utils'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
